test/expected/explain_alf_i.out
explain _Alignas(4) int f()
        ^
9: error: function can not be aligned
